@@ -1,3 +1,9 @@
+2009-12-10  Hans-J. Boehm <Hans.Boehm@hp.com>
+
+	* test.c (main, WinMain): Consistently don't invoke
+	GC_enable_incremental() if MAKE_BACKGRAPH is defined, but
+	do invoke it even if parallel marking is enabled.
+
 2009-12-08  Ivan Maidanski <ivmai@mail.ru>
 
 	* tests/test.c (reverse_test): Comment out a check for MSWIN32
